--- a/SudokuUI/MainWindowForm.resx
+++ b/SudokuUI/MainWindowForm.resx
@@ -243,6 +243,15 @@
         RU5ErkJggg==
 </value>
   </data>
+  <data name="aboutToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAALRJREFUSEvtkisOAjEURavQLASJRLIY5DhWACQY9gDMKpBIJAtAgWUFfO5JXpPJ
+        UDd3FHOSkzSvybvta9OAi5Hcynu4iZoNGr7kXh7kO2o2HpLmmaPkJjZ6D2AcjIXGdaxX0gYPupb5kVnb
+        Hnkq5wXH0sJZfgrOpAUCrjKfvJL2gOap0RqwkPye3gKg2XQI+GEnL7IdQI29zvCLnvIkJyFraux1hiY3
+        uWxJzRbASEpaAv6alL4cLkfeJoXc5gAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="worker_solve.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>124, 7</value>
   </metadata>
