added image export, improved the generator, added fast solving option

--- a/SudokuUI/MainWindowForm.resx
+++ b/SudokuUI/MainWindowForm.resx
@@ -168,6 +168,18 @@
         coPqlxtUv9yg+n8mfuyI1f5j5/Eeq0MBUxgN6PnhlHDGrKhSegPoJY6+p6xmjgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="exportAsImageToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAYFJREFUSEvtlL8rRWEchy8TCpNiorDIpgwyir/BLKPRj8lAMsvkD5DBiCTKwGKR
+        /EwM/gCElAx+PM97jlvn3nO7x72bPPXU+/2+7/v5Hhwn9+epxyncwt0C7U2iZypmGz/xCAsH2HPPQRXR
+        h184Eap03POMZ8vSjAvoU/uEZ/iBLVgK9zxzjt7xrhlmJajDC3zHA/TwDo5hOTzjWe941wyzzMwziv6o
+        Q6GqDjPMMjPPDNqsCVUxbTiLG7GuWzGNWjRrPlQxPwPSGMZn9Hd9Hevb84TupWHWYrSMKDWgA1/xFHts
+        xPSiPQe32ygg84BlfMPOUCXpRveWQpUk84AT3I+Wqbh3HC0TZB5whf5RS7GJl9EyQeYBa3iPjaFK0oQP
+        uBqqJJkHDKJvzDo22Ihxbc+9ARsFZB4g7hl0hyuxru35pU3jVwNkBPfQV/YF/SyU+h+QogHjaLMrVNXh
+        62uWmXn8FDziDc7hdIV69xbNMjNBPx6iX0OfoBK9a4ZZ/2Qhl/sGgrqJs8Nj5YUAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="leavePremadeNumbersToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
